Instant Crash on Window minimize #33223

Closed
opened 2012-11-18 16:19:46 +01:00 by Thomas Dinges · 4 comments

%%%* Windows 7 x64

  • SVN 52333
  1. Open Blender (Factory Settings)
  2. Press F12 to render or Press ALT+A to playback an animation
  3. While the WM job is still running, minimize the Blender Window (Window Header)
  4. Crash.

Note: This does NOT happen when running Blender with nVidia GT 540. The crash only happens when running Blender via Intel HD 3000.

Also, it only happens when WM Draw method is Triple Buffer (which Auto currently points to). Overlap, Overlap Flip and Full work.

Fix would be to revert 52036 by Ton.

%%%

%%%* Windows 7 x64 * SVN 52333 1) Open Blender (Factory Settings) 2) Press F12 to render or Press ALT+A to playback an animation 3) While the WM job is still running, minimize the Blender Window (Window Header) 4) Crash. Note: This does NOT happen when running Blender with nVidia GT 540. The crash only happens when running Blender via Intel HD 3000. Also, it only happens when WM Draw method is Triple Buffer (which Auto currently points to). Overlap, Overlap Flip and Full work. Fix would be to revert 52036 by Ton. %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'

%%%This seems just nother crap of intel drivers. I do have quite the same bug happens for second window only (like minimizing user prefs window). For now solution would be to manually switch to other drawing method. I will check if it'll help skipping flusning ogl buffer for minimized window.%%%

%%%This seems just nother crap of intel drivers. I do have quite the same bug happens for second window only (like minimizing user prefs window). For now solution would be to manually switch to other drawing method. I will check if it'll help skipping flusning ogl buffer for minimized window.%%%

%%%Fixed in svn rev52366. Thanks for the report, closing.%%%

%%%Fixed in svn rev52366. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33223
No description provided.