Fix #33223: Instant Crash on Window minimize

Issue was caused by manipulating with triple buffers of minimized window.
It's more like an Intel driver bug but we can workaround it in quite clear
way by skipping draw of minimized windows.